stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Get':
CircularBuffer.c:50:9: error: invalid type argument of unary '*' (have 'int')
   50 |  return *self->output_index;
      |         ^~~~~~~~~~~~~~~~~~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
